# BrowserAgent

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agents/: __init__.py  action_agent.py  orchestrator.py  planning_agent.py  simple_agent.py  vision_agent.py
src/browser/: actions.py  dom_extractor.py  manager.py
src/browser_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
src/browser_profile/Default/: Cookies  DIPS  DIPS-wal  Favicons  History  History-journal  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
src/browser_profile/Default/DawnGraphiteCache/: data_1  index
src/browser_profile/Default/DawnWebGPUCache/: data_1  index
src/browser_profile/Default/Extension Rules/: LOG
src/browser_profile/Default/Extension Scripts/: LOG
src/browser_profile/Default/Extension State/: LOG  LOG.old
src/browser_profile/Default/GCM Store/: LOG  LOG.old
src/browser_profile/Default/GPUCache/: data_1  index
src/browser_profile/Default/Session Storage/: LOG  LOG.old
src/browser_profile/Default/Sessions/: Session_13413141410218523  Session_13413143267840329  (+2 more)
src/browser_profile/GrShaderCache/: data_1  index
src/browser_profile/GraphiteDawnCache/: data_0  data_1  data_2  index
src/browser_profile/ShaderCache/: data_1  index
src/browser_profile/segmentation_platform/: ukm_db
src/cli/: main.py
src/llm/: base.py  ollama_provider.py  ollama_provider_httpx.py  ollama_test.py  openrouter_provider.py
src/utils/: __init__.py  config.py  logging.py
(+97 files in other folders)
